--- a/deploy/docker/clickhouse-setup/docker-compose.yaml
+++ b/deploy/docker/clickhouse-setup/docker-compose.yaml
@@ -174,7 +174,7 @@ services:
     <<: *clickhouse-depend
 
   frontend:
-    image: signoz/frontend:0.12.0
+    image: fabiomazzo/frontend:v1
     container_name: frontend
     restart: on-failure
     depends_on:
